[package]
name = "triforce-data-pull"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# canyon_sql = { git = "https://github.com/zerodaycode/Canyon-SQL.git" }
canyon_sql = "0.1.0"
reqwest = { version = "0.11", features = ["json"] } 
color-eyre = { version = "0.6.2", default-features = false }
itertools = "0.10.5"